<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/title" />

    <!-- Canvas 2D No Inheritance -->

    <Button
        android:id="@+id/btCanvas2DNoInheritance"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:onClick="btCanvas2D_no_inheritance_clicked"
        android:layout_below="@+id/tvTitle"
        android:text="@string/Canvas2DNoInheritance"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvCanvas2DNoInheritanceResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btCanvas2DNoInheritance"
        android:layout_alignTop="@+id/btCanvas2DNoInheritance"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/btCanvas2DNoInheritance"
        android:gravity="center_vertical"
        android:text="@string/Result"
        tools:ignore="RtlHardcoded" />
    
    
    <!-- Canvas 2D SDK -->

    <Button
        android:id="@+id/btCanvas2DSdk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:onClick="btCanvas2D_sdk_clicked"
        android:layout_below="@+id/btCanvas2DNoInheritance"
        android:text="@string/Canvas2DSdk"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvCanvas2DSdkResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btCanvas2DSdk"
        android:layout_alignTop="@+id/btCanvas2DSdk"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/btCanvas2DSdk"
        android:gravity="center_vertical"
        android:text="@string/Result"
        tools:ignore="RtlHardcoded" />
    
    
    <!-- Canvas 2D Empty -->

    <Button
        android:id="@+id/btCanvas2DEmpty"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:onClick="btCanvas2D_empty_clicked"
        android:layout_below="@+id/btCanvas2DSdk"
        android:text="@string/Canvas2DEmpty"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvCanvas2DEmptyResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btCanvas2DEmpty"
        android:layout_alignTop="@+id/btCanvas2DEmpty"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/btCanvas2DEmpty"
        android:gravity="center_vertical"
        android:text="@string/Result"
        tools:ignore="RtlHardcoded" />
    

</RelativeLayout>